[gd_scene load_steps=5 format=3 uid="uid://1la02h0ifldv"]

[ext_resource type="Script" path="res://pantallas/combate/combate2.gd" id="1_clgm2"]
[ext_resource type="Texture2D" uid="uid://b0ltqnsmtn0tx" path="res://pantallas/mazmorras/Battleground2/Bright/Battleground4.png" id="1_uf88b"]
[ext_resource type="PackedScene" uid="uid://1u8fu60wg640" path="res://personajes/main/characters/main_character.tscn" id="2_j52mr"]
[ext_resource type="PackedScene" uid="uid://chsp042ghxqkc" path="res://personajes/Enemigos/enemy2.tscn" id="3_gdb5e"]

[node name="Combate2" type="Node2D"]
script = ExtResource("1_clgm2")

[node name="bg2" type="TextureRect" parent="."]
show_behind_parent = true
offset_right = 896.0
offset_bottom = 1078.0
texture = ExtResource("1_uf88b")
expand_mode = 3

[node name="MainCharacter" parent="." instance=ExtResource("2_j52mr")]
position = Vector2(565, 673)
slide_on_ceiling = false

[node name="Enemy2" parent="." instance=ExtResource("3_gdb5e")]
position = Vector2(1608, 708)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="options" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = -312.0
offset_right = 156.0
offset_bottom = -176.0
grow_vertical = 0
scale = Vector2(2, 2)

[node name="atk1" type="Button" parent="CanvasLayer/options"]
layout_mode = 2
text = "Ataque básico"

[node name="atk2" type="Button" parent="CanvasLayer/options"]
layout_mode = 2
text = "Ataque potente"

[node name="ability" type="Button" parent="CanvasLayer/options"]
layout_mode = 2
text = "Habilidad"

[node name="scape" type="Button" parent="CanvasLayer/options"]
layout_mode = 2
text = "Huir"

[node name="ExitConfirmationDialog" type="AcceptDialog" parent="."]
title = "Huir"
size = Vector2i(200, 100)
ok_button_text = "Sí"
dialog_text = "¿Estás seguro?"

[node name="ResultDialog" type="AcceptDialog" parent="."]
title = "Huir"
size = Vector2i(200, 100)
ok_button_text = "Sí"
dialog_text = "¿Estás seguro?"

[connection signal="pressed" from="CanvasLayer/options/atk1" to="." method="_on_atk_1_pressed"]
[connection signal="pressed" from="CanvasLayer/options/atk2" to="." method="_on_atk_2_pressed"]
[connection signal="pressed" from="CanvasLayer/options/ability" to="." method="_on_ability_pressed"]
[connection signal="pressed" from="CanvasLayer/options/scape" to="." method="_on_scape_pressed"]
[connection signal="confirmed" from="ResultDialog" to="." method="_on_result_dialog_confirmed"]
